--- a/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
+++ b/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjetoBiblioteca.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 </head>
 <body>
     <header>
@@ -36,6 +37,43 @@
         </main>
     </div>
 
+    <nav class="sidebar position-fixed d-flex flex-column" id="sidebarMenu">
+
+
+        <div class="btn-expandir d-none d-md-block">
+            <i class="bi bi-arrow-right-circle-fill" id="btn-exp"></i>
+        </div>
+
+        <ul class="lista-nav flex-grow-1 list-unstyled">
+            <li class="item-menu">
+                <a asp-controller="Autor" asp-action="Index">
+                    <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
+                    <span class="txt-link">Autores</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a asp-controller="Editora" asp-action="Index">
+                    <span class="icon"><i class="bi bi-building"></i></span>
+                    <span class="txt-link">Editoras</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a asp-controller="Genero" asp-action="Index">
+                    <span class="icon"><i class="bi bi-book-half"></i></span>
+                    <span class="txt-link">Generos</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a asp-controller="Usuarios" asp-action="Index">
+                    <span class="icon"><i class="bi bi-book-half"></i></span>
+                    <span class="txt-link">Usuarios</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+
+
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - ProjetoBiblioteca - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -43,6 +81,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
