--- a/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
+++ b/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
             </li>
             <li class="item-menu">
                 <a asp-controller="Usuarios" asp-action="Index">
-                    <span class="icon"><i class="bi bi-book-half"></i></span>
+                    <sp class="icon"><i class="bi bi-book-half"></i></sp  an>
                     <span class="txt-link">Usuarios</span>
                 </a>
             </li>
