--- a/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
+++ b/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
@@ -69,6 +69,12 @@
                     <span class="txt-link">Usuarios</span>
                 </a>
             </li>
+            <li class="item-menu">
+                <a asp-controller="Livro" asp-action="Index">
+                    <sp class="icon"><i class="bi bi-book-half"></i></sp  an>
+                    <span class="txt-link">Livros</span>
+                </a>
+            </li>
         </ul>
     </nav>
 
