--- a/ProjetoBiblioteca/Views/Livro/Criar.cshtml
+++ b/ProjetoBiblioteca/Views/Livro/Criar.cshtml
@@ -64,7 +64,12 @@
 
     </div>
 
+    <div class="field">
+        <label>Capa do livro</label>
+        <input type="file" name="Capa" accept="image/*" class="input" />
+        <small class="hint">Formatos comuns: JPG/PNG. Tamanho moderado.</small>
 
+    </div>
 
     <div><label>Ano</label><input asp-for="Ano" type="number" /></div>
 
